--- a/stockiq/app.ipynb
+++ b/stockiq/app.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "4c463751",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TICKER_SYMBOL = \"RELIANCE.NS\"\n",
+    "TICKER_SYMBOL = \"ZENTEC.NS\"\n",
     "PEER_TICKERS = [\"TCS.NS\", \"HDFCBANK.NS\", \"ICICIBANK.NS\"]"
    ]
   },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "1e2924cf",
    "metadata": {},
    "outputs": [
